# pytest-requests

./: .travis.yml  CHANGELOG.md  README.md  pyproject.toml
demo/: test_config.py  test_http_methods.py  test_parameters.py  test_redirects.py  test_session.py
demo/api/: cookies.py  html_form.py  http_methods.py  redirects.py  response_formats.py
hogwarts_apitest/: api.py
pytest_requests/: __init__.py  api.py  exceptions.py  response.py  testcase.py  utils.py  validators.py
pytest_requests/http/: __init__.py  request.py  response.py
tests/: test_core.py  test_httpbin.py  test_utils.py  test_validators.py
tests/api/: httpbin.py
tests/httpbin/: api.py  testcases.py
tests/testcases/: httpbin.py
